<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:background="@color/textBlue"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_hours"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textColor="@color/white"
        android:backgroundTint="@color/btnBgColor"
        />
    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_01_01_2000"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textStyle="bold"
        android:textColor="@color/LightGrey"
        />
    <TextView
        android:id="@+id/tvAgeInHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000000"
        android:textColor="@color/textBlue"
        android:textSize="35sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_hours_till_date"
        android:textStyle="bold"
        android:textColor="@color/LightGrey"
        />
</LinearLayout>